refactor: move reused code into util-classes